# studybox

./: .envc  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: all_logs.py  band_descriptors.json  celery_worker.py  main.py  schemas.py
app/config/: logging_config.py
app/prompts/: band_scores_prompt_template.txt  speaking_final_score_prompt_template.txt  writing_correction_prompt_template.txt  writing_correction_prompt_template_old1.txt  writing_final_score_prompt_template.txt
app/tests/: test_celery.py  test_fastapi.py
