[tool.poetry]
name = "ml-module"
version = "0.1.0"
description = "module to get scores for speaking and writing using LLMS"
authors = ["yailama <adakopyan@gmail.com>"]
readme = "README.md"

packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.11"
celery = "^5.4.0"
pydantic = "^2.8.0"
alembic = "^1.13.2"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.31"
uvicorn = "^0.30.1"


redis = "^5.0.7"
openai = "^1.35.10"
pylint = "^3.2.5"
structlog = "^24.4.0"
[tool.poetry.group.dev.dependencies]
commitizen = "^3.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
app = "app.main:start"
